# order-book

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  statement.md
app/: main.cpp
benchmarks/: benchmark_runner.cpp
include/orderbook/: utils.hpp
include/orderbookio/: updates.pb.cc  updates.pb.h
proto/: test.py  updates.proto
report/: baseline_benchmark.json  benchmark.md  paralell.md  solution_benchmark.json
src/: baseline.cpp  solution.cpp  utils.cpp
tests/: sample_input.txt  test_generator.py  updates_pb2.py  utils_test.cpp
